; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_card.c___card_unlockedhandler.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_card.c___card_unlockedhandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 (i64, i64)* }

@EXI_CHANNEL_0 = common dso_local global i64 0, align 8
@EXI_CHANNEL_2 = common dso_local global i64 0, align 8
@CARD_ERROR_NOCARD = common dso_local global i64 0, align 8
@cardmap = common dso_local global %struct.TYPE_3__* null, align 8
@CARD_ERROR_READY = common dso_local global i64 0, align 8
@CARD_ERROR_UNLOCKED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64)* @__card_unlockedhandler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @__card_unlockedhandler(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32 (i64, i64)*, align 8
  %8 = alloca %struct.TYPE_3__*, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 (i64, i64)* null, i32 (i64, i64)** %7, align 8
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %8, align 8
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* @EXI_CHANNEL_0, align 8
  %11 = icmp ult i64 %9, %10
  br i1 %11, label %16, label %12

12:                                               ; preds = %2
  %13 = load i64, i64* %4, align 8
  %14 = load i64, i64* @EXI_CHANNEL_2, align 8
  %15 = icmp uge i64 %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %12, %2
  %17 = load i64, i64* @CARD_ERROR_NOCARD, align 8
  store i64 %17, i64* %3, align 8
  br label %43

18:                                               ; preds = %12
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** @cardmap, align 8
  %20 = load i64, i64* %4, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i64 %20
  store %struct.TYPE_3__* %21, %struct.TYPE_3__** %8, align 8
  %22 = load i64, i64* @CARD_ERROR_READY, align 8
  store i64 %22, i64* %6, align 8
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i32 (i64, i64)*, i32 (i64, i64)** %24, align 8
  store i32 (i64, i64)* %25, i32 (i64, i64)** %7, align 8
  %26 = load i32 (i64, i64)*, i32 (i64, i64)** %7, align 8
  %27 = icmp ne i32 (i64, i64)* %26, null
  br i1 %27, label %28, label %41

28:                                               ; preds = %18
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  store i32 (i64, i64)* null, i32 (i64, i64)** %30, align 8
  %31 = load i64, i64* %4, align 8
  %32 = call i64 @EXI_Probe(i64 %31)
  %33 = icmp eq i64 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %28
  %35 = load i64, i64* @CARD_ERROR_NOCARD, align 8
  store i64 %35, i64* %6, align 8
  br label %36

36:                                               ; preds = %34, %28
  %37 = load i32 (i64, i64)*, i32 (i64, i64)** %7, align 8
  %38 = load i64, i64* %4, align 8
  %39 = load i64, i64* %6, align 8
  %40 = call i32 %37(i64 %38, i64 %39)
  br label %41

41:                                               ; preds = %36, %18
  %42 = load i64, i64* @CARD_ERROR_UNLOCKED, align 8
  store i64 %42, i64* %3, align 8
  br label %43

43:                                               ; preds = %41, %16
  %44 = load i64, i64* %3, align 8
  ret i64 %44
}

declare dso_local i64 @EXI_Probe(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
